Replace ImmutableList.of() and ImmutableMap.of() with Java standard List.of() and Map.of()
- Replaced all 336 occurrences of ImmutableList.of() with List.of() across 102 files
- Replaced all 386 occurrences of ImmutableMap.of() with Map.of() across 63 files
- Removed unused Guava ImmutableList and ImmutableMap imports from 149 files
- Added missing java.util.List import where needed
- Preserved imports for files that use other ImmutableList/ImmutableMap methods (e.g., .builder(), .copyOf())