@@ -18,7 +18,6 @@
  */
 package org.apache.pinot.common.utils;
 
-import com.google.common.collect.ImmutableList;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
@@ -96,32 +95,32 @@ public class ServiceStatusTest {
   public void testMultipleServiceStatusCallback() {
     // Only good should return good
     ServiceStatus.MultipleCallbackServiceStatusCallback onlyGood =
-        new ServiceStatus.MultipleCallbackServiceStatusCallback(ImmutableList.of(ALWAYS_GOOD));
+        new ServiceStatus.MultipleCallbackServiceStatusCallback(List.of(ALWAYS_GOOD));
 
     assertEquals(onlyGood.getServiceStatus(), ServiceStatus.Status.GOOD);
 
     // Only bad should return bad
     ServiceStatus.MultipleCallbackServiceStatusCallback onlyBad =
-        new ServiceStatus.MultipleCallbackServiceStatusCallback(ImmutableList.of(ALWAYS_BAD));
+        new ServiceStatus.MultipleCallbackServiceStatusCallback(List.of(ALWAYS_BAD));
 
     assertEquals(onlyBad.getServiceStatus(), ServiceStatus.Status.BAD);
 
     // Only starting should return starting
     ServiceStatus.MultipleCallbackServiceStatusCallback onlyStarting =
-        new ServiceStatus.MultipleCallbackServiceStatusCallback(ImmutableList.of(ALWAYS_STARTING));
+        new ServiceStatus.MultipleCallbackServiceStatusCallback(List.of(ALWAYS_STARTING));
 
     assertEquals(onlyStarting.getServiceStatus(), ServiceStatus.Status.STARTING);
 
     // Good + starting = starting
     ServiceStatus.MultipleCallbackServiceStatusCallback goodAndStarting =
-        new ServiceStatus.MultipleCallbackServiceStatusCallback(ImmutableList.of(ALWAYS_GOOD, ALWAYS_STARTING));
+        new ServiceStatus.MultipleCallbackServiceStatusCallback(List.of(ALWAYS_GOOD, ALWAYS_STARTING));
 
     assertEquals(goodAndStarting.getServiceStatus(), ServiceStatus.Status.STARTING);
 
     // Good + starting + bad = starting (check for left-to-right evaluation)
     ServiceStatus.MultipleCallbackServiceStatusCallback goodStartingAndBad =
         new ServiceStatus.MultipleCallbackServiceStatusCallback(
-            ImmutableList.of(ALWAYS_GOOD, ALWAYS_STARTING, ALWAYS_BAD));
+            List.of(ALWAYS_GOOD, ALWAYS_STARTING, ALWAYS_BAD));
 
     assertEquals(goodStartingAndBad.getServiceStatus(), ServiceStatus.Status.STARTING);
   }
