@@ -18,7 +18,6 @@
  */
 package org.apache.pinot.core.data.manager;
 
-import com.google.common.collect.ImmutableList;
 import java.io.File;
 import java.lang.reflect.Field;
 import java.util.ArrayList;
@@ -187,7 +186,7 @@ public class BaseTableDataManagerAcquireSegmentTest {
     // If a caller tries to acquire the deleted segment using acquireSegments, it will be returned in
     // notAcquiredSegments. The isSegmentDeletedRecently method should return true.
     List<String> notAcquiredSegments = new ArrayList<>();
-    tableDataManager.acquireSegments(ImmutableList.of(segmentName), notAcquiredSegments);
+    tableDataManager.acquireSegments(List.of(segmentName), notAcquiredSegments);
     Assert.assertEquals(notAcquiredSegments.size(), 1);
     Assert.assertTrue(tableDataManager.isSegmentDeletedRecently(segmentName));
 
