@@ -20,7 +20,6 @@ package org.apache.pinot.calcite.rel.traits;
 
 import com.google.common.annotations.VisibleForTesting;
 import com.google.common.base.Preconditions;
-import com.google.common.collect.ImmutableList;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
@@ -119,7 +118,7 @@ public class TraitAssignment {
     RelNode input = sort.getInput();
     RelTraitSet newTraitSet = input.getTraitSet().plus(RelDistributions.SINGLETON);
     input = input.copy(newTraitSet, input.getInputs());
-    return sort.copy(sort.getTraitSet(), ImmutableList.of(input));
+    return sort.copy(sort.getTraitSet(), List.of(input));
   }
 
   /**
@@ -165,7 +164,7 @@ public class TraitAssignment {
     RelNode rightInput = join.getInput(1);
     RelTraitSet rightTraitSet = rightInput.getTraitSet().plus(rightDistribution);
     rightInput = rightInput.copy(rightTraitSet, rightInput.getInputs());
-    return join.copy(join.getTraitSet(), ImmutableList.of(leftInput, rightInput));
+    return join.copy(join.getTraitSet(), List.of(leftInput, rightInput));
   }
 
   /**
@@ -182,7 +181,7 @@ public class TraitAssignment {
       RelTraitSet newTraitSet = input.getTraitSet().plus(RelDistributions.hash(aggregate.getGroupSet().asList()));
       input = input.copy(newTraitSet, input.getInputs());
     }
-    return aggregate.copy(aggregate.getTraitSet(), ImmutableList.of(input));
+    return aggregate.copy(aggregate.getTraitSet(), List.of(input));
   }
 
   /**
@@ -242,7 +241,7 @@ public class TraitAssignment {
         input = input.copy(input.getTraitSet().plus(newHashDistTrait), input.getInputs());
       }
     }
-    return window.copy(window.getTraitSet(), ImmutableList.of(input));
+    return window.copy(window.getTraitSet(), List.of(input));
   }
 
   private RelNode assignLookupJoin(Join join) {
@@ -264,8 +263,8 @@ public class TraitAssignment {
             RelDistributions.BROADCAST_DISTRIBUTED), Collections.emptyList());
     PhysicalProject newProject =
         (PhysicalProject) oldProject.copy(oldProject.getTraitSet().plus(RelDistributions.BROADCAST_DISTRIBUTED),
-            ImmutableList.of(newTableScan));
-    return join.copy(join.getTraitSet(), ImmutableList.of(leftInput, newProject));
+            List.of(newTableScan));
+    return join.copy(join.getTraitSet(), List.of(leftInput, newProject));
   }
 
   @SuppressWarnings("unused")
@@ -286,6 +285,6 @@ public class TraitAssignment {
     RelTraitSet rightTraitSet = rightInput.getTraitSet().plus(distribution)
         .plus(PinotExecStrategyTrait.PIPELINE_BREAKER);
     rightInput = rightInput.copy(rightTraitSet, rightInput.getInputs());
-    return join.copy(join.getTraitSet(), ImmutableList.of(leftInput, rightInput));
+    return join.copy(join.getTraitSet(), List.of(leftInput, rightInput));
   }
 }
